--- a/first-app/src/App.sass
+++ b/first-app/src/App.sass
@@ -1,12 +1,9 @@
 .App
-  text-align: center
+  display: grid
+  width: 900px
+  margin: 0 auto
+  justify-content: space-around
 
-.App-header
-  background-color: #aca7a7
-  min-height: 100vh
-  display: flex
-  flex-direction: column
-  align-items: center
-  justify-content: center
-  font-size: calc(10px + 2vmin)
-  color: white
+.App__content
+  font-size: 20px
+  padding: 0 15px
