--- a/first-app/src/App.sass
+++ b/first-app/src/App.sass
@@ -2,7 +2,9 @@
   display: grid
   width: 900px
   margin: 0 auto
-  justify-content: space-around
+  justify-content: space-between
+  grid-template-columns: 1fr 1fr
+  padding: 100px
 
 .App__content
   font-size: 20px
