--- a/first-app/src/App.sass
+++ b/first-app/src/App.sass
@@ -2,9 +2,7 @@
   display: grid
   width: 900px
   margin: 0 auto
-  justify-content: space-between
-  grid-template-columns: 1fr 1fr
-  padding: 100px
+  grid-template-columns: repeat(2, 200px)
 
 .App__content
   font-size: 20px
